--- a/.github/workflows/milestone-close.yml
+++ b/.github/workflows/milestone-close.yml
@@ -24,7 +24,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Make gradlew executable
-        run: chmod +x gradlew
+        run: chmod +x ./gradlew
 
       - name: Build with Gradle
         run: |
