--- a/.github/workflows/milestone-verif.yml
+++ b/.github/workflows/milestone-verif.yml
@@ -2,7 +2,8 @@ name: "Milestone Verification"
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened, edited]
+    types: [opened, synchronize, reopened, edited, assigned, demilestoned, milestoned,
+             ready_for_review]
 
 jobs:
   milestone-verif:
