[DOCS] Update release.yml to add new labels for improvements and changes

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -3,8 +3,11 @@ changelog:
     - title: "Nouvelles fonctionnalités"
       labels:
         - "📦 Features"
+        - "➕ Ajout"
+    - title: "Améliorations & Corrections"
+      labels:
         - "🆙 Amélioration"
-        - "🔄️ Changement"
+        - "🔧️ Changement"
     - title: "Bugs & Optimisations"
       labels:
         - "🪲 Bug Report"
